@@ -31,9 +31,9 @@ dependencies {
     implementation ('org.apache.httpcomponents:httpclient:4.5.14') {
         exclude group: 'commons-logging', module: 'commons-logging'
     }
-    implementation 'org.apache.logging.log4j:log4j-core:2.24.3'
+    implementation 'org.apache.logging.log4j:log4j-core:2.25.0'
     implementation 'com.oracle.database.jdbc:ojdbc11:23.8.0.25.04'
-    implementation 'org.springframework:spring-jdbc:6.2.7'
+    implementation 'org.springframework:spring-jdbc:6.2.8'
 
     /*
     implementation 'org.incenp:sssom-core:0.7.9'
